--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -2516,6 +2516,58 @@ p {
   }
 }
 
+.is-tech-pager {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+
+  position: fixed;
+  z-index: 90;
+  top: 50%;
+  right: 5%;
+  width: 20px;
+  height: 350px;
+  margin-top: -175px;
+  .swiper-pagination-bullet {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 0;
+    background: transparent;
+    opacity: 1;
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 4px;
+      height: 100%;
+      margin-left: -2px;
+      border-radius: 2px;
+      background: #dfdfdf;
+      transition: background .2s;
+    }
+    &:hover {
+      &:before {
+        background: #888;
+      }
+
+    }
+    + .swiper-pagination-bullet {
+      margin-top: 10px;
+    }
+  }
+  .swiper-pagination-bullet-active {
+    &:before {
+      background: #353535;
+    }
+  }
+}
+
 .is-partners-slider {
   box-sizing: border-box;
   display: block;
