--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -2038,6 +2038,7 @@ p {
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 580px;
   overflow: hidden;
   .swiper-container {
     width: 100%;
@@ -2202,9 +2203,11 @@ p {
 }
 
 .is-tech-layout-b {
+  box-sizing: border-box;
   position: relative;
   overflow: hidden;
   height: 100%;
+  padding: 50px 0 0 0;
 
   display: flex;
   flex-direction: row;
@@ -2284,9 +2287,11 @@ p {
 }
 
 .is-tech-layout-c {
+  box-sizing: border-box;
   position: relative;
   overflow: hidden;
   height: 100%;
+  padding: 50px 0 0 0;
 
   display: flex;
   flex-direction: row;
@@ -2327,7 +2332,7 @@ p {
     display: block;
     width: 100%;
     height: 500px;
-    padding: 80px 20px 20px 20px;
+    padding: 80px 20px 0 20px;
     background: #fff;
     box-shadow: 0 20px 20px -12px rgb(199, 214, 220);
     + .l-item {
@@ -2349,9 +2354,11 @@ p {
 }
 
 .is-tech-layout-d {
+  box-sizing: border-box;
   position: relative;
   overflow: hidden;
   height: 100%;
+  padding: 50px 0 0 0;
 
   display: flex;
   flex-direction: row;
@@ -2396,9 +2403,11 @@ p {
 }
 
 .is-tech-layout-e {
+  box-sizing: border-box;
   position: relative;
   overflow: hidden;
   height: 100%;
+  padding: 50px 0 0 0;
 
   display: flex;
   flex-direction: row;
@@ -2413,8 +2422,8 @@ p {
     display: block;
     position: relative;
     overflow: hidden;
-    width: 878px;
-    margin: 0 auto 50px auto;
+    width: 700px;
+    margin: 0 auto 30px auto;
   }
   .l-action {
     display: flex;
@@ -2454,9 +2463,11 @@ p {
 }
 
 .is-tech-layout-f {
+  box-sizing: border-box;
   position: relative;
   overflow: hidden;
   height: 100%;
+  padding: 50px 0 0 0;
 
   display: flex;
   flex-direction: row;
@@ -2529,7 +2540,7 @@ p {
   right: 5%;
   width: 20px;
   height: 350px;
-  margin-top: -175px;
+  margin: -175px -40px 0 0;
   .swiper-pagination-bullet {
     position: relative;
     display: block;
@@ -2648,6 +2659,97 @@ p {
     }
   }
 }
+
+
+
+@media (min-height: 680px) {
+  .is-tech-layout-e {
+    .l-video-parent {
+      width: 900px;
+    }
+  }
+}
+
+@media (max-height: 680px) {
+
+  .is-tech-layout-a {
+    .l-header {
+      margin: 0 0 30px 0;
+      font-size: 31px;
+      line-height: 37px;
+    }
+    .l-col {
+      font-size: 14px;
+      line-height: 21px;
+    }
+  }
+
+  .is-tech-layout-b {
+    .l-header {
+      margin: 0 0 50px 0;
+      font-size: 31px;
+      line-height: 37px;
+    }
+    .l-counter {
+      font-size: 31px;
+      line-height: 31px;
+    }
+    .l-text {
+      font-size: 14px;
+      line-height: 21px;
+    }
+    .l-col-image {
+      width: 170px;
+    }
+  }
+
+  .is-tech-layout-c {
+    .l-header {
+      margin: 0 0 30px 0;
+      font-size: 31px;
+      line-height: 37px;
+    }
+    .l-item {
+      height: 450px;
+      padding: 60px 15px 0 15px;
+    }
+  }
+
+  .is-tech-layout-d {
+    .l-header {
+      margin: 0 0 30px 0;
+      font-size: 31px;
+      line-height: 37px;
+    }
+    .l-counter {
+      font-size: 31px;
+      line-height: 31px;
+    }
+    .l-left {
+      margin-right: 150px;
+    }
+
+  }
+
+  .is-tech-layout-f {
+    padding: 90px 0 0 0;
+    .l-row-top {
+      margin-bottom: 20px;
+    }
+    .l-col-map {
+      height: 370px;
+    }
+  }
+
+  .ymap-inner-partners {
+    .y-ip-image {
+      display: none;
+    }
+  }
+
+}
+
+
 
 // pages
 
