--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -2707,6 +2707,7 @@ p {
   }
   .l-sub-header {
     margin: 0 0 60px 0;
+    min-height: 54px; // 2 rows
     @include intro-black;
     @include font(#444,27px,27px);
   }
@@ -2751,6 +2752,9 @@ p {
     width: 100%;
     @include intro;
     @include font(#444,16px,24px);
+    &.state-text-small {
+      @include font(#444,14px,23px);
+    }
   }
 }
 
@@ -2865,7 +2869,8 @@ p {
     @include font(#444,61px,61px);
   }
   .l-preview {
-    margin: 0 0 40px 0;
+    margin: 0 0 20px 0;
+    min-height: 190px;
     @include intro;
     @include font(#444,16px,24px);
   }
@@ -3320,6 +3325,10 @@ p {
     .l-text {
       font-size: 14px;
       line-height: 21px;
+      &.state-text-small {
+        font-size: 13px;
+        line-height: 21px;
+      }
     }
     .l-col-image {
       width: 170px;
