--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3491,6 +3491,10 @@ p {
     text-transform: uppercase;
     text-align: center;
   }
+  .mf-action {
+    padding: 30px 0 0 0;
+    text-align: center;
+  }
 }
 
 .fb-modal-gallery {
