--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -775,6 +775,7 @@ p {
       padding: 0 40px 0 15px;
       outline: none;
       border: 1px solid #bbc4cd;
+      background: #fff;
       border-radius: 4px;
       @include intro;
       @include font(#5a5a5a,14px,60px);
@@ -1843,6 +1844,9 @@ p {
     .ps-h-right {
       display: block;
     }
+    .is-mobile-filters {
+      display: none;
+    }
   }
   .ps-slider-parent {
     position: relative;
@@ -2387,6 +2391,28 @@ p {
   }
   .dl-item-icon {
 
+  }
+}
+
+.is-select-filter {
+  margin: 0 0 30px 0;
+  select {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    height: 60px;
+    padding: 0 40px 0 15px;
+    outline: none;
+    border: 1px solid #bbc4cd;
+    background: #fff;
+    border-radius: 4px;
+    @include intro;
+    @include font(#5a5a5a,14px,60px);
+    box-shadow: inset 1px 0 0 0 transparent;
+    transition: border .2s, box-shadow .2s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
   }
 }
 
@@ -3467,7 +3493,7 @@ p {
   }
   .md-header {
     display: block;
-    margin: 0 0 30px 0;
+    margin: 0 0 20px 0;
     @include intro;
     @include font(#000,29px,29px);
     text-transform: uppercase;
