--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -2754,8 +2754,17 @@ p {
     @include font(#444,27px,27px);
   }
   .l-col-image {
+
     flex-shrink: 0;
     flex-grow: 0;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+
     margin-right: 30px;
     width: 230px;
   }
@@ -2781,7 +2790,7 @@ p {
     height: auto;
     padding-bottom: 100%;
     background: #444;
-    + .l-image {
+    +.l-image {
       margin-top: 20px;
     }
   }
